--- a/mjc-blog/config.yml
+++ b/mjc-blog/config.yml
@@ -158,8 +158,9 @@ markup:
     # anchorLineNos: true
     codeFences: true
     guessSyntax: true
-    # lineNos: true
-    noClasses: true
+    lineNos: true
+    noClasses: false
+    lineNumbersInTable: false
     tabWidth: 4
     style: monokai
     # codeFences：代码围栏功能，这个功能一般都要设为 true 的，不然很难看，就是干巴巴的-代码文字，没有颜色。
